# keel

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: coding_tasks.json
benchmarks/results/main-benchmark-repro-2026-07-02/: DATA_PROVENANCE.md  context-ablation-v2.json  harness-regression-v2.json  keel-benchmark-core-report.md  memory-ablation-v2.json  recovery-ablation-v2.json
docs/architecture/: agent-harness-v1-overview.md
docs/review-pack/: README.md
examples/mini-keel/: pyproject.toml
examples/mini-keel/mini_keel/: __init__.py  cli.py  context_manager.py  providers.py  runtime.py  workspace.py
examples/mini-keel/tests/: test_agent_loop.py  test_contract.py  test_tools.py
keel/: __init__.py  agent_loop.py  cli.py  context_manager.py  prompt_prefix.py  run_store.py  runtime.py  task_state.py  tools.py  workspace.py
keel/evaluation/: evaluator.py  metrics.py
keel/features/: memory.py
keel/providers/: clients.py
scripts/: collect_project_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
tests/: test_agent_loop.py  test_allowed_tools.py  test_checkpoint.py  test_context_manager.py  test_evaluator.py  test_keel.py  test_memory.py  test_metrics.py  test_prompt_prefix.py  test_public_api_contract.py  test_run_store.py  test_safety_invariants.py  test_security.py  test_session_store.py  test_task_state.py  test_tool_executor.py  test_tools.py
