[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-keel"
version = "0.1.0"
description = "Teaching-sized Keel agent harness"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mini-keel = "mini_keel.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["mini_keel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
